Day 17 almost part 2