@@ -2,14 +2,17 @@ package aocj2024;
 
 import java.util.ArrayList;
 import java.util.Arrays;
+import java.util.Collections;
 import java.util.List;
+import java.util.Objects;
 import java.util.regex.Matcher;
 import java.util.regex.Pattern;
+import java.util.stream.Collectors;
 
 public class Day17 extends Day {
     @Override
     public void part1() {
-        List<String> lines = getLinesFromFile("day17.txt").toList();
+        List<String> lines = getLinesFromFile("day17_sample.txt").toList();
 
         Program program = Program.parse(lines.get(4));
         ProgramState initialState = ProgramState.parse(program, lines.subList(0, 3));
@@ -27,23 +30,76 @@ public class Day17 extends Day {
                         .substring(9)
                         .split(","))
                 .map(Long::parseLong)
-                .toList();
+                .collect(Collectors.toList());
 
-        Program program = Program.parse(lines.get(4)).withOutputToMatch(originalProgram);
+//        Collections.reverse(originalProgram);
+
+        Program program = Program.parse(lines.get(4));
         ProgramState initialState = ProgramState.parse(program, lines.subList(0, 3));
 
-        long A = 15000000000L;
+        Long result = program.getMatchingOutput(initialState, new ArrayList<>(originalProgram.size()), originalProgram);
 
-        while (!originalProgram.equals(program.execute(initialState.withA(A)).output)) {
-            A++;
+        System.out.println(result);
 
-            if (A % 1000000 == 0) System.out.print("\r" + A);
-        }
-
-        System.out.println(A);
+//        List<Long> originalProgram = Arrays.stream(lines.get(4)
+//                        .substring(9)
+//                        .split(","))
+//                .map(Long::parseLong)
+//                .toList();
+//
+//        Program program = Program.parse(lines.get(4));
+//        ProgramState initialState = ProgramState.parse(program, lines.subList(0, 3));
+//
+//        List<Long> correctTries = new ArrayList<>();
+//
+//        for (int i = 0; i < originalProgram.size(); i++) {
+//            long offset = 0;
+//            long base = 1;
+//            System.out.println("correctTries = " + correctTries);
+//
+//            for (int j = 0, mult = 8; j < correctTries.size(); j++, mult *= 8) {
+//                offset += correctTries.get(j) * mult;
+//                base *= 8;
+//            }
+//
+//            System.out.println("offset = " + offset);
+//
+//            for (long j = 0; j < 8; j++) {
+//                long A = base + offset + j;
+//                System.out.println("A = " + A);
+//
+//                List<Long> output = program.execute(initialState.withA(A)).output;
+//                System.out.println(output);
+//
+//                boolean valid = true;
+//
+//                for (int k = 0; k < output.size(); k++) {
+//                    System.out.println(output.get(output.size() - 1 - k) + ", " + originalProgram.get(originalProgram.size() - 1 - k));
+//                    if (!Objects.equals(output.get(output.size() - 1 - k), originalProgram.get(originalProgram.size() - 1 - k))) {
+//                        valid = false;
+//                        System.out.println("invalid");
+//                        break;
+//                    }
+//                }
+//
+//                if (valid) {
+//                    correctTries.add(0, j);
+//                    break;
+//                }
+//            }
+//        }
+//
+//        long A = 0;
+//
+//        while (A < 1000) {
+//            System.out.println(A + ": " + program.execute(initialState.withA(A)).output);
+//            A++;
+//        }
+//
+//        System.out.println(correctTries);
     }
 
-    private record Program(List<Instruction> instructionSet, List<Long> outputToMatch) {
+    private record Program(List<Instruction> instructionSet) {
         private ProgramState execute(ProgramState initialState) {
             ProgramState currentState = initialState;
 
@@ -81,11 +137,50 @@ public class Day17 extends Day {
                 });
             }
 
-            return new Program(instructionSet, null);
+            return new Program(instructionSet);
         }
 
-        private Program withOutputToMatch(List<Long> outputToMatch) {
-            return new Program(instructionSet, outputToMatch);
+        private Long getMatchingOutput(ProgramState initialState, List<Long> currentMatch, List<Long> outputToMatch) {
+            long baseOffset = power(8, currentMatch.size());
+            long customOffset = 0;
+
+            for (int j = currentMatch.size() - 1, mult = 8; j >= 0; j--, mult *= 8) {
+                customOffset += currentMatch.get(j) * mult;
+            }
+
+            for (long j = 0; j < 8; j++) {
+                long A = baseOffset + customOffset + j;
+                System.out.println("A = " + A);
+
+                List<Long> output = execute(initialState.withA(A)).output;
+                System.out.println(output);
+
+                boolean valid = true;
+
+                for (int k = 0; k < output.size(); k++) {
+                    if (!Objects.equals(output.get(output.size() - 1 - k), outputToMatch.get(outputToMatch.size() - 1 - k))) {
+                        valid = false;
+                        System.out.println("invalid");
+                        break;
+                    }
+                }
+
+                if (valid) {
+                    currentMatch.add(j);
+
+                    if (currentMatch.size() == outputToMatch.size()) {
+                        return A;
+                    }
+
+                    Long result = getMatchingOutput(initialState, currentMatch, outputToMatch);
+
+                    if (result != null) return result;
+
+                    currentMatch.remove(currentMatch.size() - 1);
+                }
+            }
+
+            return null;
         }
     }
 
@@ -99,12 +194,6 @@ public class Day17 extends Day {
         }
 
         private ProgramState withOutput(long outputValue) {
-            if (program.outputToMatch != null) {
-                if (output.size() >= program.outputToMatch.size() || program.outputToMatch.get(output.size()) != outputValue) {
-                    return new ProgramState(program, -1, A, B, C, output);
-                }
-            }
-
             List<Long> newOutput = new ArrayList<>(output);
 
             newOutput.add(outputValue);
@@ -263,5 +352,12 @@ public class Day17 extends Day {
 
             return state.next().withC(newC);
         }
+    }
+
+    private static long power(long a, int b) {
+        if (b == 0) return 1;
+        if (b == 1) return a;
+        if (b % 2 == 0) return power(a * a, b/2);
+        else return a * power(a * a, b / 2);
     }
 }
